Changed to java 1.8